# Fedora-UKI-Script

./: Cargo.toml  README.md  uki-setup.sh
.github/rpm/: rustyuki.spec
.github/workflows/: checks.yml  release-fedora-rpm.yml  rpm-build.yml
src/: app.rs  cli.rs  config.rs  efi.rs  errors.rs  fsops.rs
tests/: app_integration.rs  integration_cli.rs  test_uki_setup.sh
