[package]
name = "fedora-uki"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
toml = "1"
log = "0.4"
env_logger = "0.11"
nix = { version = "0.29", features = ["user"] }

[dev-dependencies]
tempfile = "3"
